[package]
name = "geoip"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
axum = { version = "0.8", features = ["macros"] }
arc-swap = "1.7"
serde = "1"
maxminddb = { version = "0.26", features = ["mmap"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-native-roots"], default-features = false }
ahash = "0.8"
tempfile = "3.23"
flate2 = "1"
tar = "0.4"
regex = "1"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
serde_yaml = "0.9.33"
serde_json = "1"
