[package]
name = "geoip"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
arc-swap = "1.7"
serde = "1"
maxminddb = { version = "0.26", features = ["mmap"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "rustls-tls-native-roots", "json"], default-features = false }
ahash = { version = "0.8", features = ["serde"] }
tempfile = "3.23"
flate2 = "1"
tar = "0.4"
regex = "1"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
serde_yaml = "0.9.33"
serde_json = "1"
axum-prometheus = "0.9"
metrics = "0.24"
tower-http = { version = "0.6", features = ["fs"] }
handlebars = "6.3"
constant_time_eq = "0.4"
futures = "0.3"
httpdate = "1"
